--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xclothes-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ranayas.github.io/xclothes-frontend",
+  "homepage": "https://renzoansa.github.io/xclothes-frontend",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
